# rust-react-chat-v2

./: .gitignore  Cargo.toml  README.md
migrations/2023-11-15-162239_create_users/: up.sql
migrations/2023-11-15-162326_create_rooms/: up.sql
migrations/2023-11-15-162438_create_conversations/: up.sql
migrations/2023-11-15-162531_dummy_data/: up.sql
src/: db.rs  main.rs  routes.rs  server.rs  session.rs
ui/: package.json  tailwind.config.js
ui/components/: conversation.js  login.js  room.js
ui/libs/: useConversation.js  useLocalStorage.js  useWebsocket.js
ui/pages/: index.js
